event select overlay

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-LifeCalendar.xcodeproj/project.xcworkspace/xcuserdata/sun.xcuserdatad/UserInterfaceState.xcuserstate
+LifeCalendar/LifeCalendar.xcodeproj/project.xcworkspace/xcuserdata/sun.xcuserdatad/UserInterfaceState.xcuserstate
