--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-.swiftpm/xcode/package.xcworkspace/xcuserdata/sun.xcuserdatad/UserInterfaceState.xcuserstate
+LifeCalendar.xcodeproj/project.xcworkspace/xcuserdata/sun.xcuserdatad/UserInterfaceState.xcuserstate
