event drag long press

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-LifeCalendar/LifeCalendar.xcodeproj/project.xcworkspace/xcuserdata/sun.xcuserdatad/UserInterfaceState.xcuserstate
+LifeCalendar.xcodeproj/project.xcworkspace/xcuserdata/sun.xcuserdatad/UserInterfaceState.xcuserstate
